# mpu6050_serial_to_imu_ROS2

./: CMakeLists.txt  package.xml
launch/: imu.launch.py
params/: imu_config.yaml  imu_params.yaml
src/: mpu6050_serial_to_imu_node.cpp
